Ensure color transitions on buttons only happen when hovering and not when switching from dark mode

--- a/projects/client/src/styles.scss
+++ b/projects/client/src/styles.scss
@@ -81,3 +81,9 @@ html {
 .flex-4 {
   flex-grow: 4;
 }
+
+.changing-themes {
+  * {
+    transition: none !important;
+  }
+}
